fix: code cleaning

--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="bg-primary text-secondary">
+	<body data-sveltekit-preload-data="hover" class="mx-auto max-w-7xl bg-primary text-secondary">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
